objects/vlocity_ins__DRBulkData__c.object
<CustomObject>
    <description>Vlocity interface object used to temporarily store bulk JSON data while it is in the process of being imported via DataRaptor.</description>
    <fields>
        <fullName>vlocity_ins__AsyncApexJobId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Async Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRBundleName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DR Custom Setting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRError__c</fullName>
        <description>Full error when processing.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DR Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRProgressData__c</fullName>
        <description>JSON of current progress processing item if using bulk processing methods</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DR Progress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRStatus__c</fullName>
        <description>Status after processing DR map.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DR Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Data__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Global Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DataRaptor Bulk Data</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>DataRaptor Bulk Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataRaptor Bulk Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>